# MDNDM

./: .gitignore  .gitignore.rtf  CMakeLists.txt  README.md  Robot1.0.cpp  Robot2.0.cpp  Robot3.0.cpp  Robot4.0.cpp  Robot5.0.cpp  Robot6.0.cpp  Robot7.0.cpp  artefact.cpp  artefacts_randomization.cpp  boss_in_the_gym.cpp  cards.h  main.cpp  usually.h
ProjectGroup_Mars_Resource_Battle/: ProjectGroup_Mars_Resource_Battle.groupproj  ProjectGroup_Mars_Resource_Battle.groupproj.local  main.cpp
ProjectGroup_Mars_Resource_Battle/MainProject/: Additional_Libraries.h  Main.cbproj  Main.cbproj.local  Main.deployproj  Main.res  MainUnit.cpp  MainUnit.fmx  MainUnit.h  denisMain.cpp
ProjectGroup_Mars_Resource_Battle/MainProject/Classes/: Artifact.h  Board.h  Cards.h  Cell.h  Robot.h
ProjectGroup_Mars_Resource_Battle/MainProject/Texts/: AuthorsInfo.txt  AuthorsInfoStr.h  Rules.txt  RulesStr.h
ProjectGroup_Mars_Resource_Battle/MainProject/__history/: Additional_Libraries.h.~4~  Additional_Libraries.h.~5~  Additional_Libraries.h.~7~  Libraries.h.~1~  Main.cbproj.local.~1~  Main.cpp.~7~  MainUnit.cpp.~100~  MainUnit.cpp.~101~  MainUnit.cpp.~102~  MainUnit.cpp.~103~  MainUnit.cpp.~10~  MainUnit.cpp.~116~  MainUnit.cpp.~117~  MainUnit.cpp.~118~  MainUnit.cpp.~119~  MainUnit.cpp.~11~  MainUnit.cpp.~120~  MainUnit.cpp.~121~  MainUnit.cpp.~122~  MainUnit.cpp.~123~  MainUnit.cpp.~124~  MainUnit.cpp.~125~  MainUnit.cpp.~126~  MainUnit.cpp.~127~  (+351 more)
ProjectGroup_Mars_Resource_Battle/Maybe_3D/: Maybe_3D.cbproj  Maybe_3D.cbproj.local  Maybe_3D.res  Unit1.cpp  Unit1.fmx  Unit1.vlb
(+569 files in other folders)
